test/cases/__builtin/no-builtin-global.c
// RUN: %check -e %s -fno-builtin -fsyntax-only

a = __builtin_constant_p(3); // CHECK: error: global scalar initialiser not constant
